--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,7 +4,9 @@
 
 <div>
   <%= link_to "Edit this book", edit_book_path(@book) %> |
-  <%= link_to "Back to books", books_path %>
+  <%= link_to "Back to books", books_path %> |
+  <%= link_to "add review", new_book_review_path(@book) %>
+
 
   <%= button_to "Destroy this book", @book, method: :delete %>
 </div>
