--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: review) do |form| %>
+<%= form_for :review do |form| %>
   <% if review.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(review.errors.count, "error") %> prohibited this review from being saved:</h2>
@@ -15,7 +15,7 @@
     <%= form.label :comment, style: "display: block" %>
     <%= form.text_field :comment %>
   </div>
-
+ 
   <div>
     <%= form.submit %>
   </div>
