--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,6 +1,31 @@
 <h1>New review</h1>
+<!-- <%= debugger %> -->
+<%= form_for @review do |form| %>
+  <% if review.errors.any? %>
+    <div style="color: red">
+      <h2><%= pluralize(review.errors.count, "error") %> prohibited this review from being saved:</h2>
 
-<%= render "form", review: @review %>
+      <ul>
+        <% review.errors.each do |error| %>
+          <li><%= error.full_message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div>
+    <%= form.label :comment, style: "display: block" %>
+    <%= form.text_field :comment %>
+  </div>
+
+  <div>
+    <%= form.number_field :book_id ,value: @book.id, type: :hidden  %>
+  </div>
+ 
+  <div>
+    <%= form.submit %>
+  </div>
+<% end %>
 
 <br>
 
