--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,14 +1,10 @@
 <p style="color: green"><%= notice %></p>
-
-<h1>Reviews</h1>
+<h1>Reviews of the Book : <%= @books.name %></h1>
 
 <div id="reviews">
   <% @reviews.each do |review| %>
     <%= render review %>
-    <p>
-      <%= link_to "Show this review", review %>
-    </p>
-  <% end %>
+      <% end %>
 </div>
 
-<%= link_to "New review", new_review_path %>
+<%= link_to "back to review", book_path(@books) %>
