--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,7 +1,6 @@
 <h1>New review</h1>
-<!-- <%= debugger %> -->
-<%= form_for @review do |form| %>
-  <% if review.errors.any? %>
+<%= form_for [@book, @review]  do |form| %>
+  <% if @review.errors.any? %>
     <div style="color: red">
       <h2><%= pluralize(review.errors.count, "error") %> prohibited this review from being saved:</h2>
 
@@ -30,5 +29,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to reviews", reviews_path %>
+  <%= link_to "Back to books", book_path(@book) %>
 </div>
