--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>ActiveAdminProject</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
@@ -11,12 +12,48 @@
   </head>
 
   <body>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <nav class="navbar navbar-expand-md navbar-dark bg-primary">
+  <a class="navbar-brand" href="#">Navbar</a>
+  
+
+  <div class="collapse navbar-collapse" id="navbarColor01">
+    <ul class="navbar-nav mr-auto">
+  <li class="nav-item active">
+  <%= link_to 'Home', books_path, class: 'nav-link' %>
+  </li>
+
+    <% if user_signed_in? %>
+    <li class="nav-item">
+      <%= link_to 'Signout', destroy_user_session_path , class: 'nav-link' %>
+    </li>
+    <% else %>
+    <li class="nav-item">
+      <%= link_to 'Sign in ', new_user_session_path, class: 'nav-link' %>
+    </li>
+    <li class="nav-item">
+      <%= link_to 'Sign up ', user_session_path, class: 'nav-link' %>
+    </li>
+  <% end %>
+
+
+      </ul>
+  </div>
+</nav>
+
+
     <% if notice %> 
       <p class="alert alert-success"> <%= notice %> </p> 
     <% end %> 
     <% if alert %> 
       <p class="alert alert-danger"><%= alert %></p> 
     <% end %>
+
+
     <%= yield %>
   </body>
 </html>
