--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
 
     <% if user_signed_in? %>
     <li class="nav-item">
-      <%= link_to 'Signout', destroy_user_session_path , class: 'nav-link' %>
+      <%= link_to 'Signout', destroy_user_session_path ,data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'}, class: 'nav-link' %>
     </li>
     <% else %>
     <li class="nav-item">
