--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,34 +1,53 @@
-<%= form_with(model: book) do |form| %>
-  <% if book.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(book.errors.count, "error") %> prohibited this book from being saved:</h2>
+<style>
+page_wrap
+{
+    border: 1px solid black;
+    width: 250px;
+    height: 100px;
+    margin-left: auto;
+    margin-right: auto;
+}
+body
+{
+    text-align: center; 
+}
+</style>
 
-      <ul>
-        <% book.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+<div class="body">
+  <div class="page_wrap" >
+    <%= form_with(model: book) do |form| %>
+      <% if book.errors.any? %>
+        <div style="color: red">
+          <h2><%= pluralize(book.errors.count, "error") %> prohibited this book from being saved:</h2>
 
-  <div>
-    <%= form.label :name, style: "display: block" %>
-    <%= form.text_field :name %>
+          <ul>
+            <% book.errors.each do |error| %>
+              <li><%= error.full_message %></li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+      <div>
+        <div style="width: 325px; margin-left: 570px;">
+          <%= form.text_field :name , placeholder: "Enter Name Of The Book" %>
+        </div>
+        <br>
+
+        <div style="width: 325px; margin-left: 570px;">
+            <%= form.text_field :genre , placeholder: "Enter Genre"%>
+        </div>
+        <br>
+
+        <div>
+          <%= form.label :AddImage , style: "display: block" %>      
+          <%= form.file_field :image %>
+        </div>
+        <br>
+
+        <div>
+          <%= form.submit %>
+        </div>
+      </div>
+    <% end %>
   </div>
-
-  <div>
-    <%= form.label :genre, style: "display: block" %>
-    <%= form.text_field :genre %>
-  </div>
-
-  <div>
-    <%= form.label :image, style: "display: block" %>
-    <%= form.file_field :image %>
-  </div>
-
-
-
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
+</div>
