--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,42 +17,13 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-primary">
-  <a class="navbar-brand" href="#">Navbar</a>
-  
-
-  <div class="collapse navbar-collapse" id="navbarColor01">
-    <ul class="navbar-nav mr-auto">
-  <li class="nav-item active">
-  <%= link_to 'Home', books_path, class: 'nav-link' %>
-  </li>
-
-    <% if user_signed_in? %>
-    <li class="nav-item">
-      <%= link_to 'Signout', destroy_user_session_path ,data: {turbo_method: :delete, turbo_confirm: 'Are you sure?'}, class: 'nav-link' %>
-    </li>
-    <% else %>
-    <li class="nav-item">
-      <%= link_to 'Sign in ', new_user_session_path, class: 'nav-link' %>
-    </li>
-    <li class="nav-item">
-      <%= link_to 'Sign up ', user_session_path, class: 'nav-link' %>
-    </li>
-  <% end %>
-
-
-      </ul>
-  </div>
-</nav>
-
-
     <% if notice %> 
       <p class="alert alert-success"> <%= notice %> </p> 
     <% end %> 
     <% if alert %> 
       <p class="alert alert-danger"><%= alert %></p> 
     <% end %>
-
+    <%= render "layouts/navbar"%>
 
     <%= yield %>
   </body>
