--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,31 +1,7 @@
 <h1>New review</h1>
-<%= form_for [@book, @review]  do |form| %>
-  <% if @review.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(review.errors.count, "error") %> prohibited this review from being saved:</h2>
 
-      <ul>
-        <% review.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div>
-    <%= form.label :comment, style: "display: block" %>
-    <%= form.text_field :comment %>
-  </div>
-
-  <div>
-    <%= form.number_field :book_id ,value: @book.id, type: :hidden  %>
-  </div>
- 
-  <div>
-    <%= form.submit %>
-  </div>
-<% end %>
-
+<%= render "reviews/form" %>
 <br>
 
 <div>
